Changing run in Circle ci 4