@@ -62,12 +62,12 @@
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>
-						--illegal-access=permit
+						&#45;&#45;illegal-access=permit
 					</argLine>
 				</configuration>
 			</plugin>
@@ -76,7 +76,7 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
 					<argLine>
-						--illegal-access=permit
+						&#45;&#45;illegal-access=permit
 					</argLine>
 				</configuration>
 				<executions>
@@ -87,7 +87,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 	<scm>
